--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,8 @@
     <color name="gray">#DDDDDD</color>
     <color name="teal">#FF009688</color>
 
-
+    <color name="card_background_color">#344955</color>
+    <color name="divider_color">#FFFFFF</color>
+    <color name="primary_text_color">#000000</color>
+    <color name="secondary_text_color">#808080</color>
 </resources>
