--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -80,6 +80,9 @@
         <action
             android:id="@+id/action_addProductInDeposit_to_nav_deposit"
             app:destination="@id/nav_deposit" />
+        <argument
+            android:name="idDeposit"
+            app:argType="long" />
     </fragment>
 
     <fragment
