--- a/app/src/main/res/layout/item_deposit.xml
+++ b/app/src/main/res/layout/item_deposit.xml
@@ -41,7 +41,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical">
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginBottom="@dimen/_8sdp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_tanggal_deposit"
@@ -71,6 +74,7 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/_15ssp" />
             </LinearLayout>
+
 
         </LinearLayout>
 
